[package]
name = "tsdisplay"
description = "Displays timestamp in local timezone."
documentation = "https://github.com/boonshift/tsdisplay"
homepage = "https://github.com/boonshift/tsdisplay"
repository = "https://github.com/boonshift/tsdisplay"
version = "0.1.0"
authors = ["Boon Hian Tek <boon.tek@gmail.com>"]
license = "Unlicense OR MIT"
edition = "2018"

[[bin]]
name = "tsdisplay"

[dependencies]
chrono = "0.4.10"
regex = "1.3.4"
